--- a/challenge_notebook.Rmd
+++ b/challenge_notebook.Rmd
@@ -1,26 +1,54 @@
 ---
-title: "R Notebook"
+title: "Allianz DataViz Challenge"
+author: "Daniel Bader"
 output:
-  html_document: default
   html_notebook: default
+  html_document: default
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
-
-```{r}
-plot(cars)
-```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file).
-
-
-```{r}
+```{r, message=FALSE}
 library(plotly)
-plot_ly(x=1:10, y=1:10)
+library(data.table)
+library(tidyr)
 ```
+
+
+```{r, echo=TRUE}
+plot_ly(x=1:10, y=1:10, type='scatter', mode='markers')
+```
+
+# Preprocessing
+
+* Load data file
+* assign first column as row names
+* clean row names
+* rename "Religion, Spirituality & New Age" to "Religion" in row and column
+
+```{r}
+file_bookstore <- file.path("~/Downloads/toydata/book_genres_data.csv")
+books_mat <- read.csv(file_bookstore, row.names = 1)
+rownames(books_mat) <- make.names(rownames(books_mat))
+rownames(books_mat)[13] <- colnames(books_mat)[13] <- "Religion"
+```
+
+* Check if upper and lower triangle identical
+
+```{r}
+identical(
+    sort(books_mat[upper.tri(books_mat)]), 
+    sort(books_mat[lower.tri(books_mat)])
+)
+```
+
+* Transform to long and tidy `data.table`
+
+```{r}
+books_dt <- as.data.table(books_mat, keep.rownames = TRUE)
+setnames(books_dt, c('genreA',colnames(books_mat)))
+books_dt <- gather(books_dt, genreB, sales, Satire:Journals)
+books_dt
+```
+
+* Check if columns sum up to value of diagonal
 
 
