--- a/challenge_notebook.Rmd
+++ b/challenge_notebook.Rmd
@@ -50,13 +50,11 @@ books_dt <- as.data.table(gather(books_dt, genreB, customers, Satire:Journals))
 head(books_dt)
 ```
 
-* Check if columns sum up to value of diagonal
+* Check if diagnoal sums of to total amount of customers
 
 ```{r}
-is_diagonal_sum_of_column <- {books_dt[genreA =='Satire' 
-    & genreB != 'Satire', sum(customers)] 
-    - books_dt[genreA =='Satire' & genreB == 'Satire', customers]} == 0
-is_diagonal_sum_of_column
+total_customers <- 195387
+sum(books_dt[genreA==genreB, customers])
 ```
 
 
@@ -97,3 +95,33 @@ plot_ly(data=pair_dt[order(pair_customers, decreasing=T)][1:10], type='bar',
 )
 ```
 
+* Look for customers that buy only one genre
+    * Compare `column sum` and  `2*diagonal value`
+    * generate table with `{genreA=<genre>, genreB=NA, customers={2*diagonal-colSum}}`
+    
+* If a customer buys more than 2 genres, he is recorded in more than 1 off-diagonal entry
+--> (2*diagonal - colSum) < 0
+* If a genre is bought more often alone than in triplets (or higher), (2*diagonal - colSum) > 0
+
+
+```{r}
+all_genres <- unique(books_dt$genreA)
+selective_dt <- data.table()
+tmp <- sapply(all_genres, function(g){
+    d <- books_dt[genreA==g & genreB==g, customers]
+    cs <- sum(books_dt[genreA==g, customers])
+    selective_customers <- I(2*d - cs)#;selective_customers
+    selective_dt <<- rbind(selective_dt, 
+        data.table(genreA=g, genreB=NA, customers=selective_customers)
+    )
+})
+
+plot_ly(data=selective_dt[order(customers)], 
+    x=~genreA, y=~customers, type="bar"
+)%>% layout(
+    margin=list(b=100), 
+    xaxis=list(categoryorder="trace"),
+    title="2*Diagonal - colSum"
+)
+
+```
